force-app/main/default/objects/Passages__c/Passages__c.object-meta.xml
<CustomObject>
    <label>Passage</label>
    <nameField>
        <label>Nom du passage</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Passages</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>