force-app/main/default/objects/Passages__c/fields/Code_departemental__c.field-meta.xml
<CustomField>
    <fullName>Code_departemental__c</fullName>
    <formula>LEFT (Adresse__r.Code_Postal_txt__c, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code départemental</label>
    <type>Text</type>
</CustomField>