force-app/main/default/objects/Passages__c/fields/Date_de_mise_en_place__c.field-meta.xml
<CustomField>
    <fullName>Date_de_mise_en_place__c</fullName>
    <label>Date de mise en place</label>
    <type>DateTime</type>
</CustomField>