force-app/main/default/objects/Passages__c/fields/ID_externe_de_la_tournee__c.field-meta.xml
<CustomField>
    <fullName>ID_externe_de_la_tournee__c</fullName>
    <formula>Tournee__r.Id_externe_tournee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID externe de la tournée</label>
    <type>Text</type>
</CustomField>