force-app/main/default/objects/Passages__c/fields/ID_externe_passage__c.field-meta.xml
<CustomField>
    <fullName>ID_externe_passage__c</fullName>
    <externalId>true</externalId>
    <label>ID externe passage</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>