force-app/main/default/objects/Passages__c/fields/Jeudi__c.field-meta.xml
<CustomField>
    <fullName>Jeudi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jeudi</label>
    <type>Checkbox</type>
</CustomField>