force-app/main/default/objects/Passages__c/fields/Mardi__c.field-meta.xml
<CustomField>
    <fullName>Mardi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mardi</label>
    <type>Checkbox</type>
</CustomField>