force-app/main/default/objects/Passages__c/fields/Passage_depot_retransmission__c.field-meta.xml
<CustomField>
    <fullName>Passage_depot_retransmission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passage - dépôt retransmission</label>
    <type>Checkbox</type>
</CustomField>