force-app/main/default/objects/Passages__c/fields/TECH_ID_ADRESSE__c.field-meta.xml
<CustomField>
    <fullName>TECH_ID_ADRESSE__c</fullName>
    <formula>Adresse__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH ID ADRESSE</label>
    <type>Text</type>
</CustomField>