force-app/main/default/objects/Passages__c/fields/Tournee__c.field-meta.xml
<CustomField>
    <fullName>Tournee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tournée</label>
    <referenceTo>Tournee__c</referenceTo>
    <relationshipLabel>Passages</relationshipLabel>
    <relationshipName>Passage</relationshipName>
    <type>Lookup</type>
</CustomField>