force-app/main/default/objects/Passages__c/fields/Vendredi__c.field-meta.xml
<CustomField>
    <fullName>Vendredi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vendredi</label>
    <type>Checkbox</type>
</CustomField>