force-app/main/default/objects/Passages__c/listViews/Mes_passages.listView-meta.xml
<ListView>
    <fullName>Mes_passages</fullName>
    <columns>NAME</columns>
    <columns>Tournee__c</columns>
    <columns>Date_de_mise_en_place__c</columns>
    <columns>Adresse__c</columns>
    <columns>Heure_de_passage__c</columns>
    <columns>Les_jours__c</columns>
    <columns>Les_raisons__c</columns>
    <columns>Statut__c</columns>
    <columns>Icone_statut__c</columns>
    <filterScope>Mine</filterScope>
    <label>Mes passages</label>
</ListView>